Fixed buttons misalignment in header

--- a/akvo/rsr/static/styles-src/main.scss
+++ b/akvo/rsr/static/styles-src/main.scss
@@ -471,7 +471,6 @@ nav.navbar-fixed-top {
             }
         }
         &.navbar-right {
-            margin-top: 10px;
             li {
                 margin-right: 2px;
                 &:nth-child(1) {
@@ -535,10 +534,10 @@ nav.navbar-fixed-top {
                     padding-left: 5px;
                     padding-right: 5px;
                     &.areaToggle {
+                        margin-top: 5px;
                         @include button($akvoPurple, white);
                         box-shadow: none !important;
                         padding: 8px 8px;
-                        margin-top: -3px;
                     }
                     @include responsive(tablets) {
                         padding: 10px 15px;
@@ -547,7 +546,7 @@ nav.navbar-fixed-top {
                     &.active {}
                 }
                 div.userDropdown {
-                    margin-top: 10px;
+                    margin-top: 10px !important;
                     li {
                         a {
                             padding-right: 20px;
@@ -3750,6 +3749,7 @@ main.results-page {
                 a {
                     i {
                         font-size: 120%;
+                    }
                 }
             }
         }
